final mobile tweaks, added a media query to fix menu tab, but also changed the font to be smaller on smaller screens

--- a/conFusion - before $http service/app/styles/mystyles.css
+++ b/conFusion - before $http service/app/styles/mystyles.css
@@ -99,4 +99,7 @@ body {
     .nav-tabs > li {
         float:none;
     }
+     .media-body {
+    font-size: smaller;
+  }
 }
